Mades a lot of changes

--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
         <div id="saved-tasks"></div>
       </section>
     </div>
+    <footer>
+        <h2>Contattami!</h2>
+        <p>
+          &lpar;+39&rpar;3274639068
+        </p>
+        <p> simone.potenzatr@gmail.com
+        </p>
+        <p>
+          Via XXIV Maggio 62, Melendugno &lpar;LE&rpar;</p>
+      </footer>
+    </footer>
     <script src="script/script.js"></script>
   </body>
 </html>
